# streptocad

./: .dockerignore  .gitignore  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: deploy_apprunner_container.yml  docker_aws_workflow.yml  run-tests.yml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/app_workflows/: W1_overexpression_workflow.ipynb  W2_CRISPR-BEST-single.ipynb  W3_multiplexed_CRISPR-BEST.ipynb  W4_CRISPRi.ipynb  W5_CRISPR-cas9-inframe-deletion.ipynb  W5_CRISPR-cas9-inframe-deletion_random_sized_deletion.ipynb  (+2 more)
protocols/: cas3_single_target_crispr_plasmid_protocol.md  conjugation_protcol.md  multi_target_crispr_plasmid_protcol.md  overexpression_protocol.md  single_target_crispr_plasmid_protcol.md
streptocad/: __init__.py  teemi_functions.py  utils.py
tests/: test_CRISPR_BEST_CRISPy_web.py  test_CRISPRi_CRISPy_web.py  test_cas3_plasmid_cloning.py  test_cas9_CRISPy_web.py  test_crispr_best.py  test_gibson_cloning.py  test_golden_gate_cloning.py  test_guideRNA_crispri.py  test_guideRNAcas3_9.py  test_guideRNAcas3_9_12.py  test_lab_functions.py  test_pcr_simulation.py  test_plasmid_processing.py  test_primer_analysis.py  test_primer_generation.py  test_sequence_loading.py  test_sgRNA.py  test_ssDNA_bridging.py  test_utils.py
web_app/: README.md  about_and_misson_statement.py  application.py  callbacks_interactivity.py  components.py  footer.py  header.py  how_to_make_your_own_workflows.md  intro_message.py  introduction_page.py  styling.py  tooltip.py  welcome_message.py
(+1096 files in other folders)
